--- a/Makefile.in
+++ b/Makefile.in
@@ -85,8 +85,8 @@ CWARNING_FLAGS =	\
 						-Wunreachable-code\ # too much warrnings
 #						-Waggregate-return\ # useless for C++
 CXXWARNING_FLAGS		=	\
-						-Weffc++\
 						-Wsign-promo
+#						-Weffc++\
 #						-Wold-style-cast\ # lots of warrnings from libc headers
 #						-Woverloaded-virtual\ # too much unecessary warrnings
 ifeq ($(HD),1)
@@ -101,7 +101,7 @@ else
 																-D__DEBUG__ $(DB)
 endif
 COMPILER_PATH_FLAGS						= -I$(DIR_ROOT) -I$(DIR_BUILD) \
-																-I/usr/local/include
+																-I/usr/local/include -I$(HOME)/prog/TUT
 LINKER_PATH_FLAGS							= -L. -L$(DIR_TARGET) -L/usr/local/lib
 LINKER_PRIME_FLAGS						= \
 								@SPECIAL_LINKER_FLAGS@\
