r915: TUT suit added directly into project.

--- a/Makefile.in
+++ b/Makefile.in
@@ -101,7 +101,7 @@ else
 																-D__DEBUG__ $(DB)
 endif
 COMPILER_PATH_FLAGS						= -I$(DIR_ROOT) -I$(DIR_BUILD) \
-																-I/usr/local/include -I$(HOME)/prog/TUT
+																-I/usr/local/include
 LINKER_PATH_FLAGS							= -L. -L$(DIR_TARGET) -L/usr/local/lib
 LINKER_PRIME_FLAGS						= \
 								@SPECIAL_LINKER_FLAGS@\
