r955: Make process improved.

--- a/Makefile.in
+++ b/Makefile.in
@@ -182,7 +182,7 @@ clean-dep:
 
 clean: clean-dep
 	@/bin/rm -f *~ *.out .*~ .*.swp *.bak *.log *.info .depend
-	@/bin/rm -f core $(TARGET).core 1exec.core
+	@/bin/rm -f core $(TARGET).core 1exec.core journal.tut log.tut
 	@/bin/rm -f src/core src/$(TARGET).core src/1exec.core
 	@/bin/rm -f $(OBJS)
 	@/bin/rm -f $(TARGET)
