--- a/Makefile.in
+++ b/Makefile.in
@@ -36,7 +36,7 @@ VPATH					= $(DIR_ROOT)/src
 DIR_DEST 			=
 prefix				= $(DIR_DEST)/usr/bin
 doc						= $(DIR_DEST)/usr/share/doc
-LIBS					= hcore hconsole hdata dbwrapper tools
+LIBS					= pthread hcore hconsole hdata dbwrapper tools
 TARGET				= 1exec
 ifdef NODEBUG
 	TARGET = $(PRJNAME)
