--- a/Makefile.in
+++ b/Makefile.in
@@ -48,13 +48,14 @@ RED						:= $(shell tput setaf 1 || tput AF 1)
 RS						:= $(shell tput sgr0 || tput me)
 NONL					:= "-n"
 endif
-HS = .h
-SS = .c
-OS = .o
+HS = h
+SS = cxx
+OS = o
+DS = d
 CTAGS	= @CTAGS@
 FIND	= find
 .SUFFIXES:
-.SUFFIXES: $(SS) $(OS) $(HS)
+.SUFFIXES: .$(SS) .$(OS) .$(HS) .$(DS)
 CXX ?= g++
 CXX := $(subst -x c++ -x c++,-x c++,$(subst colorgcc,colorgcc -x c++,$(CXX)))
 DXX ?= $(CXX)
@@ -126,24 +127,24 @@ STATICLIBS += -lncurses
 #STATICLIBS += -lccmalloc
 
 ifeq ($(CURDIR),$(DIR_BUILD))
-HDRS = $(strip $(sort $(shell cd $(DIR_ROOT)/src && $(FIND) . -name "*.h")))
-SRCS = $(strip $(sort $(shell cd $(DIR_ROOT)/src && $(FIND) . -name "*.c")))
-OBJS = $(patsubst %.c,%.o,$(SRCS))
+HDRS = $(strip $(sort $(shell cd $(DIR_ROOT)/src && $(FIND) . -name "*.$(HS)")))
+SRCS = $(strip $(sort $(shell cd $(DIR_ROOT)/src && $(FIND) . -name "*.$(SS)")))
+OBJS = $(patsubst %.$(SS),%.$(OS),$(SRCS))
 endif
 
 # implict pattern rule
 
-%.o: %.c
+%.$(OS): %.$(SS)
 	@echo -n "Compiling \`$(subst $(DIR_ROOT)/,,$(<))' ... "; \
-	echo -n "$(@:.o=.d) " > $(@:.o=.d); \
-	$(DXX) $(CXXFLAGS) -MM $(<) -MT $(@) | grep -v '^#' >> $(@:.o=.d); \
+	echo -n "$(@:.$(OS)=.$(DS)) " > $(@:.$(OS)=.$(DS)); \
+	$(DXX) $(CXXFLAGS) -MM $(<) -MT $(@) | grep -v '^#' >> $(@:.$(OS)=.$(DS)); \
 	$(CXX) $(CXXFLAGS) $(<) -c -o $(@) 2>&1 | tee -a make.log; \
 	echo $(NONL) "done.$(CL)"
 
 #------------------------------------------------------------------------
 
 .DEFAULT:
-	@if [ "$(suffix $(<))" != ".d" ] ; then \
+	@if [ "$(suffix $(<))" != ".$(DS)" ] ; then \
 	echo -n "$(BOLD)$(RED)"; \
 	echo "Lack of \`$(<)'." | tee -a make.log; \
 	echo -n "$(RS)"; fi
@@ -183,7 +184,7 @@ static:
 	@$(MAKE) LIBS="$(STATICLIBS)"
 
 clean-dep:
-	@$(FIND) . -name '*.d' | xargs /bin/rm -f
+	@$(FIND) . -name '*.$(DS)' | xargs /bin/rm -f
 
 clean: clean-dep
 	@/bin/rm -f *~ *.out .*~ .*.swp *.bak *.log *.info .depend
@@ -217,12 +218,12 @@ install: $(TARGET)
 
 tags: $(SRCS) $(HDRS)
 	@echo -n "Rehashing tags ... "; \
-	$(CTAGS)	-R --langmap="c:,c++:.h.c" -h ".h" --languages="c++" \
+	$(CTAGS)	-R --langmap="c++:.$(HS).$(SS)" -h ".$(HS)" --languages="c++" \
 						--c++-kinds="+p+x" --format=2 --fields="afikKlmnsSz" \
 						--extra="+f+q"; \
 	echo "done."
 
 ifeq ($(CURDIR),$(DIR_BUILD))
--include $(OBJS:.o=.d)
+-include $(OBJS:.$(OS)=.$(DS))
 endif
 
