--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,13 @@ AC_PROG_CPP
 AC_PROG_CXXCPP
 AC_CHECK_PROG([CTAGS],[exctags],[exctags],[ctags])
 
+dnl Check compiler version.
+AC_MSG_CHECKING([compiler version])
+GCC_MAJOR=`echo | cpp -dM | grep __GNUC__ | awk '{print $3}'`
+GCC_MINOR=`echo | cpp -dM | grep __GNUC_MINOR__ | awk '{print $3}'`
+AC_MSG_RESULT([major $GCC_MAJOR, minor $GCC_MINOR. ])
+AS_IF([test $GCC_MAJOR -ge 4 -a $GCC_MINOR -ge 2],AC_SUBST(PCH,["-include header"]))
+
 dnl Looking for main libc headers
 AC_MSG_RESULT([--- Looking for main libc headers ... ---               [[41%]]])
 AC_HEADER_MAJOR
