r2578: build system for profiling target

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ VERSION				= 0
 SUBVERSION		= 0
 EXTRAVERSION	= 0
 include $(DIR_ROOT)/aux/common-paths.mk
-LIBS					= pthread hcore hconsole hdata dbwrapper tools
+LIBS					= hconsole tools hcore hdata dbwrapper
 TARGET				= 1exec
 ifdef NODEBUG
 	TARGET = $(PRJNAME)
