--- a/Makefile.in
+++ b/Makefile.in
@@ -31,7 +31,10 @@ SUBVERSION		= 0
 EXTRAVERSION	= 0
 include $(DIR_ROOT)/aux/common-paths.mk
 LIBS					= hconsole tools hcore hdata dbwrapper boost_filesystem boost_date_time
-TARGET				= 1exec
+EXEC_NAME			= 1exec
+TARGET				= tress
+SRC_TARGET		= src
+TARGETS				= TARGET
 ifdef NODEBUG
 	TARGET = $(PRJNAME)
 endif
@@ -43,7 +46,7 @@ include $(DIR_ROOT)/aux/common-wrapper.mk
 include $(DIR_ROOT)/aux/common-flags.mk
 include $(DIR_ROOT)/aux/common-item-paths.mk
 ifndef NODEBUG
-	COMPILER_DEBUG_FLAGS+=@PCH@
+	COMPILER_PCH_FLAGS+=@PCH@
 endif
 CXXWARNING_FLAGS:=$(filter-out -Weffc++,$(CXXWARNING_FLAGS))
 CWARNING_FLAGS								+= @PEDANTIC_ERRORS@ @EXTRA_WARNINGS@ @WARN_SHADOW@ -Wno-missing-noreturn
@@ -52,11 +55,12 @@ LINKER_PRIME_FLAGS +=	@SPECIAL_LINKER_FLAGS@
 
 include $(DIR_ROOT)/aux/common-flags-post.mk
 include $(DIR_ROOT)/aux/common-int-libs.mk
-include $(DIR_ROOT)/aux/common-filenames.mk
 include $(DIR_ROOT)/FCTF/make.mk
-include $(DIR_ROOT)/aux/common-implicit-compile.mk
 include $(DIR_ROOT)/FCTF/common-target-default.mk
+include $(DIR_ROOT)/aux/common-func.mk
+include $(DIR_ROOT)/aux/common-prepare-target.mk
 include $(DIR_ROOT)/aux/common-common-targets.mk
+include $(DIR_ROOT)/aux/common-filenames.mk
 include $(DIR_ROOT)/aux/common-target-tags.mk
 
 ifeq ($(CURDIR),$(DIR_BUILD))
