--- a/Makefile.in
+++ b/Makefile.in
@@ -29,7 +29,7 @@ PRJNAME				= tress
 VERSION				= 0
 SUBVERSION		= 0
 EXTRAVERSION	= 0
-include $(DIR_ROOT)/aux/common-paths.mk
+include $(DIR_ROOT)/_aux/common-paths.mk
 LIBS					= hconsole tools hcore hdata dbwrapper boost_filesystem boost_date_time
 EXEC_NAME			= 1exec
 TARGET				= tress
@@ -39,12 +39,12 @@ ifdef NODEBUG
 	TARGET = $(PRJNAME)
 endif
 CTAGS	= @CTAGS@
-include $(DIR_ROOT)/aux/common-basic.mk
-include $(DIR_ROOT)/aux/common-term.mk
-include $(DIR_ROOT)/aux/common-suffix.mk
-include $(DIR_ROOT)/aux/common-wrapper.mk
-include $(DIR_ROOT)/aux/common-flags.mk
-include $(DIR_ROOT)/aux/common-item-paths.mk
+include $(DIR_ROOT)/_aux/common-basic.mk
+include $(DIR_ROOT)/_aux/common-term.mk
+include $(DIR_ROOT)/_aux/common-suffix.mk
+include $(DIR_ROOT)/_aux/common-wrapper.mk
+include $(DIR_ROOT)/_aux/common-flags.mk
+include $(DIR_ROOT)/_aux/common-item-paths.mk
 ifndef NODEBUG
 	COMPILER_PCH_FLAGS+=@PCH@
 endif
@@ -53,15 +53,15 @@ CWARNING_FLAGS								+= @PEDANTIC_ERRORS@ @EXTRA_WARNINGS@ @WARN_SHADOW@ -Wno-m
 COMPILER_PRIME_FLAGS					+= @DEFS@
 LINKER_PRIME_FLAGS +=	@SPECIAL_LINKER_FLAGS@
 
-include $(DIR_ROOT)/aux/common-flags-post.mk
-include $(DIR_ROOT)/aux/common-int-libs.mk
+include $(DIR_ROOT)/_aux/common-flags-post.mk
+include $(DIR_ROOT)/_aux/common-int-libs.mk
 include $(DIR_ROOT)/FCTF/make.mk
 include $(DIR_ROOT)/FCTF/common-target-default.mk
-include $(DIR_ROOT)/aux/common-func.mk
-include $(DIR_ROOT)/aux/common-prepare-target.mk
-include $(DIR_ROOT)/aux/common-common-targets.mk
-include $(DIR_ROOT)/aux/common-filenames.mk
-include $(DIR_ROOT)/aux/common-target-tags.mk
+include $(DIR_ROOT)/_aux/common-func.mk
+include $(DIR_ROOT)/_aux/common-prepare-target.mk
+include $(DIR_ROOT)/_aux/common-common-targets.mk
+include $(DIR_ROOT)/_aux/common-filenames.mk
+include $(DIR_ROOT)/_aux/common-target-tags.mk
 
 ifeq ($(CURDIR),$(DIR_BUILD))
 -include $(OBJS:.$(OS)=.$(DS))
