r2804: Contact address changed.

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl configure.ac is integral part of tress project.
 
 dnl Initialization data.
-AC_INIT([[tress]],[[0.0.0]],[[amok@frihet.ath.cx]])
+AC_INIT([[tress]],[[0.0.0]],[[amok@codestation.org]])
 
 AC_MSG_RESULT([--- Welcome to tress configurator ---                    [[0%]]])
 AC_MSG_RESULT([--- Initialization ... ---                               [[6%]]])
