r2984: fPIC for plugin

--- a/Makefile.in
+++ b/Makefile.in
@@ -36,6 +36,7 @@ TARGET				= tress
 TARGET_PLUGIN = tressplugin
 SRC_TARGET		= src
 SRC_TARGET_PLUGIN = data
+COMPILER_FLAGS_TARGET_PLUGIN = -fPIC
 LINKER_FLAGS_TARGET_PLUGIN = -shared --allow-shlib-undefined
 TARGETS				= TARGET TARGET_PLUGIN
 ifdef NODEBUG
