file and line info for failed tests

--- a/Makefile.in
+++ b/Makefile.in
@@ -53,7 +53,7 @@ ifndef NODEBUG
 	COMPILER_PCH_FLAGS+=@PCH@
 endif
 CXXWARNING_FLAGS:=$(filter-out -Weffc++,$(CXXWARNING_FLAGS))
-CWARNING_FLAGS								+= @PEDANTIC_ERRORS@ @EXTRA_WARNINGS@ @WARN_SHADOW@ -Wno-missing-noreturn
+CWARNING_FLAGS								+= @EXTRA_WARNINGS@ @WARN_SHADOW@ -Wno-missing-noreturn
 COMPILER_PRIME_FLAGS					+= @DEFS@
 LINKER_PRIME_FLAGS +=	@SPECIAL_LINKER_FLAGS@
 
