--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ AC_CONFIG_AUX_DIR([../yaal/_aux])
 dnl tress is not Free Software.
 AC_COPYRIGHT([[tress (c) 2003 All rights reserved.]])
 
-AC_CHECK_PROG(HAS_GIT,[git-log],["true"],["false"])
+AC_CHECK_PROG(HAS_GIT,[git],["true"],["false"])
 AC_MSG_CHECKING([git id sub-command])
 AC_SUBST(GITID,[true])
 if test ["$HAS_GIT"] = ["true"] ; then
