build synced with yaal

--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -60,9 +60,5 @@ include $(DIR_ROOT)/_aux/mk/a_prepare-target.mk
 include $(DIR_ROOT)/_aux/mk/b_common-targets.mk
 include $(DIR_ROOT)/_aux/mk/c_filenames.mk
 include $(DIR_ROOT)/_aux/mk/f_target-tags.mk
-
-ifeq ($(CURDIR),$(DIR_BUILD))
--include $(OBJS:.$(OS)=.$(DS))
--include $(AOBJS:.$(AOS)=.$(ADS))
-endif
+include $(DIR_ROOT)/_aux/mk/g_deps.mk
 
