--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -31,10 +31,10 @@ SUBVERSION		= 0
 EXTRAVERSION	= 0
 include $(DIR_ROOT)/_aux/mk/0_paths.mk
 include $(DIR_ROOT)/_aux/mk/1_basic.mk
-LIBS					= hcore tools dbwrapper hconsole hdata hconsole dbwrapper tools hcore boost_filesystem-mt boost_date_time-mt
-$(eval $(call NEW_TARGET,tress,src,,-rdynamic @TARGET_LINKER_FLAGS@))
+LIBS					= hcore tools dbwrapper hconsole hdata hconsole dbwrapper tools hcore boost_filesystem-mt boost_system-mt boost_date_time-mt
+$(eval $(call NEW_TARGET,tress,src,,-rdynamic @TARGET_LINKER_FLAGS@ @LIBS@))
 $(eval $(call NEW_TARGET,cute,cute))
-$(eval $(call NEW_TARGET,tressplugin,data,@FKPIC@,-shared --allow-shlib-undefined @TARGET_LINKER_FLAGS@))
+$(eval $(call NEW_TARGET,tressplugin,data,@FKPIC@,-shared --allow-shlib-undefined @TARGET_LINKER_FLAGS@ @LIBS@))
 EXEC_NAME				= 1exec
 ifdef NODEBUG
 	TARGET = $(PRJNAME)
