--- a/configure.ac
+++ b/configure.ac
@@ -7,4 +7,12 @@ if test ["x${SONAME_FLAG}"] != ["x"] ; then
 	SONAME_FLAG="-Wl,-soname,\$(SONAME_\$(NAME))"
 fi
 AC_SUBST([SONAME_FLAG],[${SONAME_FLAG}])
+m4_include([_aux.local/m4_ax_boost_base.m4])
+m4_include([_aux.local/m4_ax_boost_system.m4])
+m4_include([_aux.local/m4_ax_boost_filesystem.m4])
+m4_include([_aux.local/m4_ax_boost_date_time.m4])
+AX_BOOST_BASE([1.35])
+AX_BOOST_SYSTEM
+AX_BOOST_FILESYSTEM
+AX_BOOST_DATE_TIME
 YAAL_CONFIGURE_CLIENT_FINALIZE
