multi-target support

--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -38,7 +38,7 @@ $(eval $(call NEW_TARGET,tress,src,-Wno-variadic-macros,@RDYNAMIC@))
 $(eval $(call NEW_TARGET,cute,cute))
 $(eval $(call NEW_TARGET,child,child))
 NAME = tressplugin
-SONAME_tressplugin = libtressplugin-0.0
+SONAME_tressplugin = $(LIB_PREFIX)tressplugin$(LIB_INFIX).$(LIB_SUFFIX)-0.0
 $(eval $(call NEW_TARGET,tressplugin,data,,-shared $(call quotecoma,@SONAME_FLAG@)))
 EXEC_NAME    = 1exec
 DO_@DO_TARGET@=1
