--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ file( GLOB TUT ./TUT/*.hpp )
 add_executable( ${PROJECT_NAME} ${SRCS} ${HDRS} ../yaal/_aux/cmake-client-config.hxx )
 add_library( TUT ${TUT} )
 add_library( tressplugin MODULE data/plugin.cxx )
-set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY ${TARGET_PATH}/tress )
+set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress )
 set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
-set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY ${TARGET_PATH}/tressplugin )
+set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
 if ( CMAKE_HOST_WIN32 )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
 	include_external_msproject( makedef ../yaal/makedef.vcproj )
