CMake build works again.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,9 @@ add_library( TUT ${TUT} )
 add_library( tressplugin MODULE data/plugin.cxx )
 set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress )
 set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
-set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
+set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX )
 if ( CMAKE_HOST_WIN32 )
+	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
 	include_external_msproject( makedef ../yaal/makedef.vcproj )
 	include_external_msproject( mkheaders ../yaal/mkheaders.vcproj )
@@ -32,6 +33,7 @@ if ( CMAKE_HOST_WIN32 )
 	add_dependencies( tress INSTALL )
 	add_dependencies( tressplugin INSTALL )
 else()
+	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tressplugin )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} ${Boost_LIBRARIES} )
 endif()
 
