--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,16 +17,23 @@ configure_file( ../yaal/_aux/cmake-client-config.hxx ${TARGET_PATH}/config.hxx )
 
 file( GLOB SRCS ./src/*.cxx )
 file( GLOB HDRS ./src/*.hxx )
+file( GLOB CHILD_SRCS ./child/*.cxx )
+file( GLOB CHILD_HDRS ./child/*.hxx )
 file( GLOB TUT ./TUT/*.hpp )
 add_executable( ${PROJECT_NAME} ${SRCS} ${HDRS} ../yaal/_aux/cmake-client-config.hxx )
-add_library( TUT ${TUT} )
+add_executable( child ${CHILD_SRCS} ${CHILD_HDRS} )
 add_library( tressplugin MODULE data/plugin.cxx )
+add_library( TUT ${TUT} )
 set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress )
+set_target_properties( child PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/child )
 set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
 set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX )
 if ( CMAKE_HOST_WIN32 )
 	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
+	set_target_properties( child PROPERTIES COMPILE_DEFINITIONS "_SIGNAL_H=1" OUTPUT_NAME child RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
+	set_source_files_properties( ${CHILD_SRCS} COMPILE_FLAGS "/FIglibc/bits/signum.h" )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
+	target_link_libraries( child ${yaal_LIBRARIES} libintl )
 	include_external_msproject( makedef ../yaal/makedef.vcproj )
 	include_external_msproject( mkheaders ../yaal/mkheaders.vcproj )
 	include_external_msproject( msvcxx ../yaal/msvcxx.vcproj )
@@ -41,5 +48,6 @@ if ( CMAKE_HOST_WIN32 )
 else()
 	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tressplugin )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} ${Boost_LIBRARIES} )
+	target_link_libraries( child ${yaal_LIBRARIES} )
 endif()
 
