Fixed build terget paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ elseif ( NOT ( "${BOOST_INSTALL_PATH}" STREQUAL "" ) )
 endif()
 
 use_cxx_compiler_flag( -Wno-missing-noreturn )
-find_package( Boost COMPONENTS filesystem date_time REQUIRED )
+find_package( Boost COMPONENTS filesystem date_time system REQUIRED )
 find_package( yaal COMPONENTS hcore tools dbwrapper hconsole REQUIRED )
 
 include_directories( . )
@@ -24,8 +24,8 @@ add_executable( ${PROJECT_NAME} ${SRCS} ${HDRS} ../yaal/_aux/cmake-client-config
 add_executable( child ${CHILD_SRCS} ${CHILD_HDRS} )
 add_library( tressplugin MODULE data/plugin.cxx )
 add_library( TUT ${TUT} )
-set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress )
-set_target_properties( child PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/child )
+set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TARGET_PATH}/tress RUNTIME_OUTPUT_DIRECTORY_COV ${TARGET_PATH}/tress RUNTIME_OUTPUT_DIRECTORY_PROF ${TARGET_PATH}/tress )
+set_target_properties( child PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY ${TARGET_PATH}/child RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/child RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TARGET_PATH}/child RUNTIME_OUTPUT_DIRECTORY_COV ${TARGET_PATH}/child RUNTIME_OUTPUT_DIRECTORY_PROF ${TARGET_PATH}/child )
 set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
 set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX )
 if ( CMAKE_HOST_WIN32 )
@@ -48,7 +48,7 @@ if ( CMAKE_HOST_WIN32 )
 	add_dependencies( tress INSTALL )
 	add_dependencies( tressplugin INSTALL )
 else()
-	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tressplugin )
+	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_RELEASE ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_COV ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_PROF ${TARGET_PATH}/tressplugin )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} ${Boost_LIBRARIES} )
 	target_link_libraries( child ${yaal_LIBRARIES} )
 endif()
