--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ if test ["x${SONAME_FLAG}"] != ["x"] ; then
 	SONAME_FLAG="-Wl,-soname,\$(SONAME_\$(NAME))"
 fi
 AC_SUBST([SONAME_FLAG],[${SONAME_FLAG}])
+CXXFLAGS_ORIG="${CXXFLAGS}"
+CXXFLAGS+=" -Wno-long-long"
 m4_include([_aux.local/m4_ax_boost_base.m4])
 m4_include([_aux.local/m4_ax_boost_system.m4])
 m4_include([_aux.local/m4_ax_boost_filesystem.m4])
@@ -19,4 +21,5 @@ AX_BOOST_BASE([1.35])
 AX_BOOST_SYSTEM
 AX_BOOST_FILESYSTEM
 AX_BOOST_DATE_TIME
+CXXFLAGS="${CXXFLAGS_ORIG}"
 YAAL_CONFIGURE_CLIENT_FINALIZE
