Speedup msvcxx execution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ elseif ( NOT ( "${BOOST_INSTALL_PATH}" STREQUAL "" ) )
 endif()
 
 if ( CMAKE_HOST_WIN32 )
+	add_definitions( /D_SECURE_SCL=0 )
 	include_directories( ${BOOST_ROOT} )
 	link_directories( ${BOOST_ROOT}/lib )
 endif()
