work on VS2010 comapt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,18 +39,27 @@ if ( CMAKE_HOST_WIN32 )
 	set_target_properties( child-simple PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME child RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
 	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
 	set_target_properties( child PROPERTIES COMPILE_DEFINITIONS "_SIGNAL_H=1" )
-	set_source_files_properties( ${CHILD_SRCS} COMPILE_FLAGS "/FIglibc/bits/signum.h" )
+	set_source_files_properties( ${CHILD_SRCS} COMPILE_FLAGS "/FIglibc/bits/signum.h /FIyaal/fix.hxx" )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
 	target_link_libraries( child ${yaal_LIBRARIES} libintl )
-	include_external_msproject( makedef ../yaal/makedef.vcproj )
-	include_external_msproject( mkheaders ../yaal/mkheaders.vcproj )
-	include_external_msproject( msvcxx ../yaal/msvcxx.vcproj )
-	include_external_msproject( hcore ../yaal/hcore.vcproj msvcxx makedef )
-	include_external_msproject( tools ../yaal/tools.vcproj hcore )
-	include_external_msproject( dbwrapper ../yaal/dbwrapper.vcproj tools )
-	include_external_msproject( hconsole ../yaal/hconsole.vcproj tools )
-	include_external_msproject( hdata ../yaal/hdata.vcproj dbwrapper hconsole )
-	include_external_msproject( INSTALL ../yaal/INSTALL.vcproj hdata mkheaders )
+	file( GLOB makedef_PROJ ../yaal/makedef.vc*proj )
+	include_external_msproject( makedef ${makedef_PROJ} )
+	file( GLOB mkheaders_PROJ ../yaal/mkheaders.vc*proj )
+	include_external_msproject( mkheaders ${mkheaders_PROJ} )
+	file( GLOB msvcxx_PROJ ../yaal/msvcxx.vc*proj )
+	include_external_msproject( msvcxx ${msvcxx_PROJ} )
+	file( GLOB hcore_PROJ ../yaal/hcore.vc*proj )
+	include_external_msproject( hcore ${hcore_PROJ} msvcxx makedef )
+	file( GLOB tools_PROJ ../yaal/tools.vc*proj )
+	include_external_msproject( tools ${tools_PROJ} hcore )
+	file( GLOB dbwrapper_PROJ ../yaal/dbwrapper.vc*proj )
+	include_external_msproject( dbwrapper ${dbwrapper_PROJ} tools )
+	file( GLOB hconsole_PROJ ../yaal/hconsole.vc*proj )
+	include_external_msproject( hconsole ${hconsole_PROJ} tools )
+	file( GLOB hdata_PROJ ../yaal/hdata.vc*proj )
+	include_external_msproject( hdata ${hdata_PROJ} dbwrapper hconsole )
+	file( GLOB INSTALL_PROJ ../yaal/INSTALL.vc*proj )
+	include_external_msproject( INSTALL ${INSTALL_PROJ} hdata mkheaders )
 	add_dependencies( tress INSTALL )
 	add_dependencies( tressplugin INSTALL )
 else()
