--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,23 +60,23 @@ if ( CMAKE_HOST_WIN32 )
 	set_source_files_properties( ${CHILD_SRCS} COMPILE_FLAGS "/FIglibc/bits/signum.h /FIyaal/fix.hxx" )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
 	target_link_libraries( child ${yaal_LIBRARIES} libintl )
-	file( GLOB makedef_PROJ ../yaal/makedef.vc*proj )
+	file( GLOB makedef_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/makedef.vc*proj )
 	include_external_msproject( makedef ${makedef_PROJ} )
-	file( GLOB mkheaders_PROJ ../yaal/mkheaders.vc*proj )
+	file( GLOB mkheaders_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/mkheaders.vc*proj )
 	include_external_msproject( mkheaders ${mkheaders_PROJ} )
-	file( GLOB msvcxx_PROJ ../yaal/msvcxx.vc*proj )
+	file( GLOB msvcxx_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/msvcxx.vc*proj )
 	include_external_msproject( msvcxx ${msvcxx_PROJ} )
-	file( GLOB hcore_PROJ ../yaal/hcore.vc*proj )
+	file( GLOB hcore_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore.vc*proj )
 	include_external_msproject( hcore ${hcore_PROJ} msvcxx makedef )
-	file( GLOB tools_PROJ ../yaal/tools.vc*proj )
+	file( GLOB tools_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools.vc*proj )
 	include_external_msproject( tools ${tools_PROJ} hcore )
-	file( GLOB dbwrapper_PROJ ../yaal/dbwrapper.vc*proj )
+	file( GLOB dbwrapper_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper.vc*proj )
 	include_external_msproject( dbwrapper ${dbwrapper_PROJ} tools )
-	file( GLOB hconsole_PROJ ../yaal/hconsole.vc*proj )
+	file( GLOB hconsole_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole.vc*proj )
 	include_external_msproject( hconsole ${hconsole_PROJ} tools )
-	file( GLOB hdata_PROJ ../yaal/hdata.vc*proj )
+	file( GLOB hdata_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata.vc*proj )
 	include_external_msproject( hdata ${hdata_PROJ} dbwrapper hconsole )
-	file( GLOB INSTALL_PROJ ../yaal/INSTALL.vc*proj )
+	file( GLOB INSTALL_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/INSTALL.vc*proj )
 	include_external_msproject( INSTALL ${INSTALL_PROJ} hdata mkheaders )
 	add_dependencies( tress INSTALL )
 	add_dependencies( tressplugin INSTALL )
