--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -72,4 +72,5 @@ include $(DIR_ROOT)/_aux/mk/e_deps.mk
 
 test:
 	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
-	$(TRESS_ENV) ./build/debug/tress/1exec $(TRESS_ARG) > /dev/null
+	. _aux/set-limits.sh && $(TRESS_ENV) ./build/debug/tress/1exec $(TRESS_ARG) > /dev/null
+
