--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -65,7 +65,7 @@ include $(DIR_ROOT)/_aux/mk/7_func.mk
 include $(DIR_ROOT)/_aux/mk/8_prepare-target.mk
 include $(DIR_ROOT)/_aux/mk/9_common-targets.mk
 include $(DIR_ROOT)/_aux/mk/a_filenames.mk
-include $(DIR_ROOT)/_aux/mk/d_target-tags.mk
+include $(DIR_ROOT)/_aux/mk/d_target-tools.mk
 include $(DIR_ROOT)/_aux/mk/e_deps.mk
 
 .PHONY: test
