--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -52,8 +52,8 @@ include $(DIR_ROOT)/_aux/mk/4_wrapper.mk
 include $(DIR_ROOT)/_aux/mk/5_flags.mk
 -include $(DIR_ROOT)/local.mk
 
-CXXFLAGS     += @EXTRA_CXXFLAGS@ @DEFS@ -Wno-missing-noreturn
-LXXFLAGS     += @EXTRA_LXXFLAGS@
+override CXXFLAGS += @EXTRA_CXXFLAGS@ @DEFS@ -Wno-missing-noreturn
+override LXXFLAGS += @EXTRA_LXXFLAGS@
 START_GROUP  = @START_GROUP@
 END_GROUP    = @END_GROUP@
 LIBS         += @LIBS@
