--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -53,7 +53,7 @@ include $(DIR_ROOT)/_aux/mk/5_flags.mk
 -include $(DIR_ROOT)/local.mk
 
 override CXXFLAGS += @EXTRA_CXXFLAGS@ @DEFS@ -Wno-missing-noreturn
-override LXXFLAGS += @EXTRA_LXXFLAGS@
+override LXXFLAGS += @EXTRA_LXXFLAGS@ @BOOST_LDFLAGS@
 START_GROUP  = @START_GROUP@
 END_GROUP    = @END_GROUP@
 LIBS         += @LIBS@
