--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -38,7 +38,7 @@ $(eval $(call NEW_TARGET,tress,src,-D__TRESS__ -Wno-variadic-macros,@RDYNAMIC@))
 $(eval $(call NEW_TARGET,child,child,-D__CHILD__))
 NAME = tressplugin
 SONAME_tressplugin = $(LIB_PREFIX)tressplugin$(LIB_INFIX).$(LIB_SUFFIX)-0.0
-$(eval $(call NEW_TARGET,tressplugin,data,,-lc -shared $(call quotecoma,@SONAME_FLAG@)))
+$(eval $(call NEW_TARGET,tressplugin,data,,-lc -shared $(call quotecomma,@SONAME_FLAG@)))
 EXEC_NAME    = 1exec
 DO_@DO_TARGET@=1
 ifdef NODEBUG
